fix width of input field on mobile

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -172,7 +172,7 @@ main {
 
   .form__input {
     padding: 0.5rem;
-    max-width: 100%;
+    max-width: 98.5%;
     font-size: var(--step-0);
     display: inline-block;
   }
